--- a/spaceduck.css
+++ b/spaceduck.css
@@ -1,3 +1,10 @@
 body{
     background-color: darkgrey;
 }
+
+.header{
+    padding: 30px;
+    text-align: center;
+    background: black;
+    color: darkgrey;
+}
