--- a/spaceduck.css
+++ b/spaceduck.css
@@ -1,10 +1,11 @@
 body{
-    background-color: darkgrey;
+    background-color: #669e77;
+    color: #444444;
 }
 
 .header{
-    padding: 30px;
+    padding: 20px;
     text-align: center;
-    background: black;
-    color: darkgrey;
+    background: #444444;
+    color: #669e77;
 }
