--- a/spaceduck.css
+++ b/spaceduck.css
@@ -40,3 +40,12 @@ li{
 }
 
 #myImg:hover {opacity: 0.7;}
+
+
+.myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.myImg:hover {opacity: 0.7;}
